# EnvShield

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  koyeb.yaml  package-lock.json  package.json  plan.md  tsconfig.base.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-koyeb.yml  robot-api-smoke.yml
apps/console/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/console/src/: App.js  App.test.js  App.test.tsx  App.tsx  styles.css
contracts/: openapi.yaml
crates/shield-cli/: Cargo.toml
crates/shield-cli/src/: api.rs  app.rs  crypto.rs  lib.rs  main.rs  runner.rs  state.rs
crates/shield-cli/tests/: crypto_roundtrip.rs  run_command.rs
docs/: branch_protection.en.md  branch_protection.md  deploy_huggingface_space.en.md  deploy_huggingface_space.md  deploy_koyeb.en.md  deploy_koyeb.md  free_vps.en.md  free_vps.md  huggingface_space_readme.template.md
scripts/: deploy_huggingface_space.sh  deploy_koyeb.sh
services/control-plane/: go.mod
services/control-plane/cmd/server/: main.go
services/control-plane/internal/api/: router.go  router_test.go
services/control-plane/internal/core/: models.go  service.go  store.go
services/control-plane/internal/store/: memory.go
tests/robot/: README.md  requirements.txt
tests/robot/libraries/: EnvShieldApiLibrary.py
tests/robot/resources/: common.resource
tests/robot/suites/: 00_health.robot  10_auth.robot  20_devices.robot  30_workspaces.robot  40_snapshots.robot  50_status.robot  60_negative.robot
wrappers/go/: go.mod
(+4 files in other folders)
