[package]
name = "shield-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "shield_cli"
path = "src/lib.rs"

[[bin]]
name = "shield"
path = "src/main.rs"

[dependencies]
age = "0.11.1"
anyhow = "1.0.97"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
whoami = "1.6.1"
zeroize = "1.8.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"
